# ecoCode-java

./: .default.docker.env  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  RULES.md  _TODOs_DDC.md  docker-compose.yml  mkdocs.yml  pom.xml  pyproject.toml  pytest.ini  tool_build.sh  tool_compile.sh  tool_release_1_prepare.sh  tool_send_to_sonar.sh  toolbox.Dockerfile  toolbox.sh  utils.sh  utils_bash.sh
.github/workflows/: _BACKUP_manual_release.yml  bash_tests.yml  build.yml  build_container.yml  tag_release.yml
docs/: index.md  toolbox.md  utils_bash.md
src/test/files/: ArrayCopyCheck.java  AvoidEagerFetchCheck.java  AvoidEagerFetchCheckWithManyAnnotations.java  AvoidEagerFetchCheckWithNoEager.java  AvoidEnergyConsumingMethodsCheck.java  AvoidFullSQLRequestCheck.java  AvoidGettingSizeCollectionInForEachLoopIgnored.java  AvoidGettingSizeCollectionInForLoopBad.java  AvoidGettingSizeCollectionInForLoopGood.java  AvoidGettingSizeCollectionInForLoopIgnored.java  AvoidGettingSizeCollectionInWhileLoopBad.java  AvoidGettingSizeCollectionInWhileLoopGood.java  AvoidGettingSizeCollectionInWhileLoopIgnored.java  AvoidMultipleIfElseStatement.java  AvoidMultipleIfElseStatementCompareMethod.java  AvoidMultipleIfElseStatementInterface.java  AvoidMultipleIfElseStatementNoIssue.java  AvoidMultipleIfElseStatementNotBlock.java  AvoidRegexPatternNotStatic.java  AvoidSQLRequestInLoopCheck.java  AvoidSetConstantInBatchUpdateCheck.java  AvoidSpringRepositoryCallInLoopCheck.java  AvoidSpringRepositoryCallInStreamCheck.java  CheckSvg.java  (+46 more)
tests/: test_toolbox.py
(+274 files in other folders)
